<resources>
    <string name="app_name">CRM-TAB</string>
    <string name="title_activity_login">CRM-TAB</string>
    <string name="message_failed_no_pair">Pas d\'appairage</string>
    <string name="message_failed_no_internet">pas de connection internet</string>
    <string name="message_failed_websocket_connection_killed">la connexion avec le serveur a échoué, veuillez réessayer</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preformated_message">Messages pré-formaté</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crv_preformated_message">Messages pré-formaté</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="sujet">Entrez un sujet ici</string>
    <string name="contact">Contact :</string>
    <string name="textViewNumero">Numéro</string>
    <string name="textviewcommentaire">Commentaire</string>
    <string name="textaddcalllog">Ajout d\'un compte-rendu d\'appel</string>
    <string name="stringregistercalldialogbox">Voulez-vous enregistrer l\'appel?</string>
    <string name="title_activity_start_call_register">StartCallRegisterActivity</string>
    <string name="title_activity_call_log_main">CallLogMainActivity</string>
    <string name="customer_list_title">Liste des clients</string>
    <string name="customer_list_add">Ajouter un client</string>
    <string name="customer_list_dialog_title">Choisir un type de client : </string>
    <string name="customer_list_dialog_validate">Valider</string>
    <string name="customer_list_dialog_cancel">Annuler</string>
    <string name="create_he_fragment_title_action_bar">Créer un Etablisement de santé</string>
    <string name="create_he_fragment_title_textview">Créer un Etablisement de santé</string>
    <string name="create_he_fragment_name_textview">Nom : </string>
    <string name="create_he_fragment_is_public_textview">Est publique : </string>
    <string name="create_he_fragment_is_public_yes_radio_button">Oui</string>
    <string name="create_he_fragment_is_public_no_radio_button">Non</string>
    <string name="create_he_fragment_siret_number_textview">Numéro de Siret : </string>
    <string name="create_he_fragment_finess_number_textview">Numéro de Finess : </string>
    <string name="create_he_fragment_street_number_textview">Numéro de rue : </string>
    <string name="create_he_fragment_street_name_textview">Nom de rue : </string>
    <string name="create_he_fragment_town_name_textview">Ville : </string>
    <string name="create_he_fragment_zip_code_textview">Code postal : </string>
    <string name="create_he_fragment_web_site_textview">Site web : </string>
    <string name="create_he_fragment_bed_number_textview">Nombre de lit : </string>
    <string name="create_he_fragment_etablishment_type_textview">Type d etablissement : </string>
    <string name="create_he_fragment_purshasing_central_textview">Centrale d achat : </string>
    <string name="create_he_fragment_holding_textview">Holding : </string>
    <string name="create_he_fragment_difficulty_having_contact_textview">Difficulté d avoir un contact : </string>
    <string name="create_he_fragment_zero_radio_button">0</string>
    <string name="create_he_fragment_one_radio_button">1</string>
    <string name="create_he_fragment_two_radio_button">2</string>
    <string name="create_he_fragment_three_radio_button">3</string>
    <string name="create_he_fragment_four_radio_button">4</string>
    <string name="create_he_fragment_five_radio_button">5</string>
    <string name="create_he_fragment_service_building_textview">Service et locaux : </string>
    <string name="create_he_fragment_validate">Valider</string>
    <string name="title_activity_crudcustomer">CRUDCustomerActivity</string>
    <string name="create_he_fragment_toast_validation">Le client a bien été créé</string>
    <string name="create_he_fragment_dialog_error_title">Erreur dans le format des champs</string>
    <string name="create_he_fragment_error_name">Champ \"Nom\" vide</string>
    <string name="create_he_fragment_error_siret">Champ \"Siret\" non valide</string>
    <string name="create_he_fragment_error_siret_empty">Champ \"Siret\" doit faire 14 caractère</string>
    <string name="create_he_fragment_error_finess">Champ \"Finess\" doit faire 9 caractères</string>
    <string name="create_he_fragment_error_street_number">Champ \"Numéro de rue\" vide</string>
    <string name="create_he_fragment_error_street_name">Champ \"Nom de rue\" vide</string>
    <string name="create_he_fragment_error_town">Champ \"Ville\" vide</string>
    <string name="create_he_fragment_error_zip_code">Champ \"Code postal\" doit faire 5 caractère</string>
    <string name="create_he_fragment_error_offline_map">La carte représentant la position du client n’a pas été pré-téléchargé" +
        " Il le sera à votre prochaine connexion au service en ligne</string>
    <string name="create_he_fragment_message_customer">Le client a bien été créé</string>
    <string name="create_he_fragment_message_customer_not_created_first_part">Client non enregistré du a une erreur
    du système.\n L\' enregistrement se fera ultérieurement automatiquement</string>
    <string name="create_indep_fragment_title_action_bar">Créer un Indépendant</string>
    <string name="create_indep_fragment_title_textview">Créer un Indépendant</string>
    <string name="create_indep_fragment_independant_type_textview">Type d indépendant :</string>
    <string name="create_indep_fragment_company_textview">Entreprise : </string>
    <string name="create_indep_fragment_specialty_textview">Spécialité : </string>
    <string name="create_indep_fragment_long_term_fidelity_textview">Fidélisation sur le long terme : </string>
    <string name="display_hc_fragment_title_action_bar">Détail d\'un établissement de santé</string>
    <string name="display_hc_fragment_title_textview">Détail d\'un établissement de santé</string>
    <string name="display_hc_fragment_adress_textview">Adresse : </string>
    <string name="display_hc_fragment_ispublic_yes_textview">Oui</string>
    <string name="display_hc_fragment_ispublic_no_textview">Non</string>
    <string name="display_hc_fragment_map_textview">Carte de </string>
    <string name="display_hc_fragment_map_unavailable">La carte représentant la position du client n’a pas été pré-téléchargé.
        \nIl le sera à votre prochaine connexion au service en ligne.</string>
    <string name="display_independant_fragment_title_action_bar">Détail d\'un indépendant</string>
    <string name="display_indep_fragment_title_textview">Détail d\'un indépendant</string>
    <string name="title_activity_abstract">AbstractActivity</string>
    <string name="title_activity_main">CRM-TAB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="activity_contact_detail_sms_content_description">Send sms</string>
    <string name="activity_contact_detail_phone_content_description">Phone call</string>
    <string name="call_activity_phone_state_message">Communication en cours</string>
    <string name="title_activity_scrolling_visit">Visites</string>
    <string name="btn_finding_prospect">Find prospect</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="prospect_tv_name">Name</string>
    <string name="prospect_tv_siret">Siret Number</string>
    <string name="prospect_tv_finess">Finess number</string>
    <string name="prospect_tv_streetNumber">Street number</string>
    <string name="prospect_tv_streetName">Street name</string>
    <string name="prospect_tv_zipCode">Zip Code</string>
    <string name="prospect_tv_town">City</string>
    <string name="prospect_tv_website">Website</string>
    <string name="prospect_tv_etablishmentType">Etablishment type</string>
    <string name="prospect_tv_turnover">Turnover</string>
    <string name="prospect_bt_insert">Insert new client</string>
    <string name="prospect_bt_back">Back</string>
    <string name="prospect_tv_bed">Bed Number</string>
    <string name="syncho_main">Synchronisation</string>
    <string name="auth_type">fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.auth</string>
    <string name="content_authority">fr.pds.isintheair.crm.controller.ctruong.uc.propsect.suggestion.provider.MyContentProvider</string>
    <string name="sync_start">Start Syncing</string>
    <string name="sync_schedule">Schedule Sync every 15 minutes</string>
    <string name="create_phoning_campaign_fragment_title_fragment">Creer une campagne de phoning</string>
    <string name="create_phoning_campaign_fragment_title">Titre de la campagne : </string>
    <string name="create_phoning_campaign_fragment_campaign_type">Type de campagne : </string>
    <string name="create_phoning_campaign_fragment_objective">Objectif(s) : </string>
    <string name="create_phoning_campaign_fragment_list_customer">Liste des clients à ajouter : </string>
    <string name="create_phoning_campaign_fragment_list_customer_added">Liste des clients ajoute : </string>
    <string name="create_phoning_campaign_fragment_button_contact_list">Ajouter des contacts</string>
    <string name="create_phoning_campaign_fragment_error_title_empty">Le titre ne peut etre vide</string>
    <string name="create_phoning_campaign_fragment_error_objective_empty">L objectif ne peut etre vide</string>
    <string name="create_phoning_campaign_fragment_alert_dialog_error">Erreur dans le format des champs</string>
    <string name="add_contact_phoning_campaign_fragment_title_fragment">Ajouter des contacts a la campagne</string>
    <string name="add_contact_phoning_campaign_fragment_button_detail">Creer la campagne de phoning</string>
    <string name="detail_phoning_campaign_fragment_title_fragment">Detail de la campagne de phoning</string>
    <string name="detail_phoning_campaign_fragment_begin_campaign">Demarrer la campagne</string>
    <string name="call_phoning_campaign_fragment_customer_name">Nom du client : </string>
    <string name="call_phoning_campaign_fragment_contact_name_firstname">Nom du contact : </string>
    <string name="call_phoning_campaign_fragment_contact_job">Position du contact : </string>
    <string name="call_phoning_campaign_fragment_commmentary">Commentaire sur l\'appel : </string>
    <string name="call_phoning_campaign_fragment_commentary_hint">Ecrire le commentaire ici</string>
    <string name="call_phoning_campaign_fragment_next_call">Passer au prochain appel</string>
    <string name="call_phoning_campaign_fragment_reset_call">Appeler plus tard</string>
    <string name="call_phoning_campaign_fragment_pause_campaign">Mettre en pause la campagne</string>
    <string name="sync_client">Client</string>
    <string name="sync_report">Call</string>
    <string name="sync_message">Message</string>
    <string name="sync_event">Event</string>
    <string name="sync_contact">Contact</string>
</resources>