<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.pds.isintheair.crmtab.ctruong.uc.propsect.suggestion.view.activity.SynchronisationActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_client"
                />
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_report"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_message"/>
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_event"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_contact"/>
            <TextView
                android:id="@+id/tv5"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:text="@string/sync_start" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sync_schedule" />
</RelativeLayout>
