<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="25sp"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/create_phoning_campaign_fragment_phone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/phone_logo_red"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/create_phoning_campaign_fragment_title"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/call_phoning_campaign_fragment_title"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:minWidth="@dimen/create_customer_min_width_edit_text"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/create_phoning_campaign_fragment_campaign_type"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/call_phoning_campaign_fragment_campaign_type"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/create_phoning_campaign_fragment_objective"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/call_phoning_campaign_fragment_objective"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:maxLines="4"
            android:scrollbars = "vertical"
            android:minWidth="@dimen/create_customer_min_width_edit_text"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/call_phoning_campaign_fragment_customer_name"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/call_phoning_campaign_fragment_customer_name"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:maxLines="4"
        android:scrollbars = "vertical"
        android:minWidth="@dimen/create_customer_min_width_edit_text"
        android:layout_height="wrap_content" />


</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/call_phoning_campaign_fragment_contact_name_firstname"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/call_phoning_campaign_fragment_contact_name_firstname"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:maxLines="4"
            android:scrollbars = "vertical"
            android:minWidth="@dimen/create_customer_min_width_edit_text"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/call_phoning_campaign_fragment_contact_job"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/call_phoning_campaign_fragment_contact_job"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:maxLines="4"
            android:scrollbars = "vertical"
            android:minWidth="@dimen/create_customer_min_width_edit_text"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/call_phoning_campaign_fragment_commmentary"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/call_phoning_campaign_fragment_commentary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/call_phoning_campaign_fragment_commentary_hint"
        android:minHeight="10dp"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:lines="15"
        android:maxLines="30"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/call_phoning_campaign_fragment_pause_campaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_phoning_campaign_fragment_pause_campaign"/>
    <Button
        android:id="@+id/call_phoning_campaign_fragment_reset_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_phoning_campaign_fragment_reset_call"/>

    <Button
        android:id="@+id/call_phoning_campaign_fragment_next_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_phoning_campaign_fragment_next_call"/>

    </LinearLayout>


</LinearLayout>